subimos con el csrf

--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -15,6 +15,7 @@
             <div>
                 {{ form.enviar }}
             </div>
+            {{ form.csrf_token() }}
         </form>
     </div>
 {% endblock %}
