--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -19,6 +19,7 @@
             <div>
                 {{ form.enviar }}
             </div>
+            {{ form.csrf_token() }}
         </form>
     </div>
 {% endblock %}
